Oct.22, 重构架构，重写所有后端逻辑；前端的两栏和三栏布局设置完成

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,21 @@
+version: '3.8'
+
 services:
-  backend:
-    build: ./backend
+  financial-advisor:
+    build: .
+    container_name: financial_advisor
     ports:
       - "8000:8000"
     volumes:
-      - ./web:/app/web
-    depends_on:
-      - brain
+      - ./data:/app/data
+    env_file:
+      - .env
+    environment:
+      - PYTHONUNBUFFERED=1
+    restart: unless-stopped
+    networks:
+      - financial_network
 
-  brain:
-    build: ./brain
-    ports:
-      - "8001:8001"
+networks:
+  financial_network:
+    driver: bridge
